# ki-adminpanel

./: .gitignore  README.md  main.spec  pyproject.toml  tattle.spec
app/: .env.example  AdminFrame.py  HomeFrame.py  ImportFrame.py  NavigationFrame.py  ScanFrame.py  main.py
app/resources/: env.ini
app/utils/: AppSettings.py  WatchTattle.py  utils.py
